회원 & 비 회원 상태 header 통합 일부 테스트

--- a/src/main/resources/templates/post_feed_form.html
+++ b/src/main/resources/templates/post_feed_form.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <div th:insert="~{/header :: headerFragment}"></div>
+    <div th:insert="~{/header :: headerFragment (${member})}"></div>
 <main>
     <!-- images will be loaded here with figure and figcaption -->
 </main>
