--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-<header th:fragment="headerFragment">
+<header th:fragment="headerFragment (member)">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/post/">snsX</a>
@@ -32,11 +32,13 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" th:if="${member != null}">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/post/upload">게시글 작성하기</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="/member/setting">[[${member.nickName}]]</a>
+          </li>
           <!--                    <li class="nav-item dropdown">-->
           <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
           <!--                            Dropdown-->
