--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <div th:insert="~{/header :: headerFragment}"></div>
+    <div th:insert="~{/header :: headerFragment (null)}"></div>
 
 <div class="container">
 
