#77 update header & footer all

--- a/src/main/resources/templates/pw_verify.html
+++ b/src/main/resources/templates/pw_verify.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment}"></div>
+<div th:insert="~{/header :: headerFragment (${member})}"></div>
 <div class="container">
     <form  th:action="@{/member/{path} (path=${path})}" method="post">
         <div>
