--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -6,7 +6,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment}"></div>
+<div th:insert="~{/header :: headerFragment (${member})}"></div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="/post/">snsX</a>
