--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -7,7 +7,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment}"></div>
+<div th:insert="~{/header :: headerFragment (${member})}"></div>
 <div class="container" th:object="${post}">
     <div class="card py-5" style="width: 25rem;">
         <img class="rounded card-img-top" th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|"
