--- a/src/main/resources/templates/search_lost_email_form.html
+++ b/src/main/resources/templates/search_lost_email_form.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment}"></div>
+<div th:insert="~{/header :: headerFragment (null)}"></div>
 <div class="container">
 
   <div class="py-5 text-center">
