--- a/src/main/resources/templates/tag_feed_form.html
+++ b/src/main/resources/templates/tag_feed_form.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment}"></div>
+<div th:insert="~{/header :: headerFragment (${member})}"></div>
 <main>
     <!-- images will be loaded here with figure and figcaption -->
 </main>
