--- a/src/main/resources/templates/member_update_form.html
+++ b/src/main/resources/templates/member_update_form.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment (${member})}"></div>
+<div th:insert="~{/header :: headerFragment (${loginMember})}"></div>
 <div class="container">
 
     <div class="py-5 text-center">
