--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -4,14 +4,98 @@
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        main {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-gap: 1rem;
+            width: 80vw;
+            margin: 3rem 3rem;
+            grid-template-rows: auto;
+        }
+        main figure {
+        }
+        main figcaption {
+            font-size: 1rem;
+            font-family: inherit;
+        }
+        main img {
+            width: 100%;
+            height: auto;
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment (${member})}"></div>
+<div th:insert="~{/header :: headerFragment (${loginMember})}"></div>
 <div class="container">
-    <p th:text="${member.nickName}"></p>
     <img class="rounded card-img-top" th:src="|/post/images/${member.profileImage}|"
          width="50" height="300"/>
+    <p th:text="${member.nickName}"></p>
+    <main>
+        <!-- images will be loaded here with figure and figcaption -->
+    </main>
 </div>
 <div th:insert="~{/footer :: footerFragment}"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+<script th:inline="javascript">
+    let offset = 0;
+    let limit = 3;
+    let isEnd = false;
+    let URL =
+        "http://localhost:8080/post/feed/" + offset + "/" + limit;
+    document.addEventListener("DOMContentLoaded", () => {
+        //set up the IntersectionObserver to load more images if the footer is visible.
+        //URL - https://gist.githubusercontent.com/prof3ssorSt3v3/1944e7ba7ffb62fe771c51764f7977a4/raw/c58a342ab149fbbb9bb19c94e278d64702833270/infinite.json
+        let options = {
+            root: null,
+            rootMargins: "0px",
+            threshold: 0.5
+        };
+        const observer = new IntersectionObserver(handleIntersect, options);
+        observer.observe(document.querySelector("footer"));
+        //an initial load of some data
+        //getData();
+    });
+    function handleIntersect(entries) {
+        if (entries[0].isIntersecting) {
+            console.warn("something is intersecting with the viewport");
+            URL = "http://localhost:8080/post/feed/" + offset + "/" + limit;
+            getData();
+        }
+    }
+    function getData() {
+        let main = document.querySelector("main");
+        console.log("fetch some JSON data");
+        if (isEnd === false) {
+            fetch(URL)
+                .then(response => response.json())
+                .then(data => {
+                    data.forEach(item => {
+                        let fig = document.createElement("figure");
+                        let fc = document.createElement("figcaption");
+                        let img = document.createElement("img");
+                        let link=document.createElement("a");
+                        link.href = "http://localhost:8080/post/" + item.postId;
+                        img.src = "http://localhost:8080/post/images/" + item.thumbnailFileName;
+                        img.alt = item.postId;
+                        fc.textContent = item.content;
+                        link.appendChild(img);
+                        fig.appendChild(link);
+                        fig.appendChild(fc);
+                        main.appendChild(fig);
+                    });
+                    if (data.length === 0) {
+                        isEnd = true;
+                    }
+                    offset += data.length;
+                });
+        }
+    }
+</script>
 </body>
 </html>
