--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -6,7 +6,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div th:insert="~{/header :: headerFragment (${member})}"></div>
+<div th:insert="~{/header :: headerFragment (${loginMember})}"></div>
 <div class="container">
     <div class="py-5 text-center">
         <h2>게시글 등록 폼</h2>
