--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -62,6 +62,13 @@
           <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
           <!--                    </li>-->
         </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" th:unless="${loginMember != null}">
+          <div class="col">
+              <button class="w-100 btn btn-lg"
+                      th:onclick="|location.href='@{/member/login}'|" type="button">로그인
+              </button>
+          </div>
+        </ul>
         <form class="d-flex" th:action="@{/search}">
           <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <input class="btn btn-outline-success" type="submit"th:value="Search"/>
