--- a/src/main/resources/templates/post_feed_form.html
+++ b/src/main/resources/templates/post_feed_form.html
@@ -102,6 +102,7 @@
     let cursor = -1;
     let limit = 3;
     let isEnd = false;
+    let stackPoint = -1;
     let URL =
         "http://localhost:8080/post/feed/" + cursor + "/" + limit;
     document.addEventListener("DOMContentLoaded", () => {
@@ -115,7 +116,7 @@
         const observer = new IntersectionObserver(handleIntersect, options);
         observer.observe(document.querySelector("footer"));
         //an initial load of some data
-        // getData();
+        console.log("here");
     });
     function handleIntersect(entries) {
         if (entries[0].isIntersecting) {
@@ -127,6 +128,9 @@
     function getData() {
         let main = document.querySelector("main");
         console.log("fetch some JSON data");
+        // if (cursor == -1) {
+        //     stackPoint =
+        // }
         if (isEnd === false) {
             fetch(URL)
                 .then(response => response.json())
@@ -144,8 +148,10 @@
                         fig.appendChild(link);
                         fig.appendChild(fc);
                         main.appendChild(fig);
+                        console.log("cursor, postId" + cursor + "," + item.postId);
                         cursor = item.postId - 1;
                     });
+                    console.log("cursor====" + cursor);
                     if (data.length === 0) {
                         isEnd = true;
                     }
