--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -55,7 +55,7 @@
         <div class="input-group">
             <span class="input-group-text">content</span>
             <textarea name="content" class="form-control" aria-label="With textarea"
-                      placeholder="댓글을 입력해주세요.."></textarea>
+                      placeholder="댓글을 입력해주세요.." id="prev-comment-content"></textarea>
         </div>
         <br/>
         <input type="text" name="id" th:value="${post.postId}" th:hidden="true">
@@ -104,6 +104,27 @@
         </form>
     </div>
 </div>
+<script th:inline="javascript">
+    const getCookieValue = (key) => {
+        let cookieKey = key + "=";
+        let result = "";
+        const cookieArr = document.cookie.split(";");
+
+        for(let i = 0; i < cookieArr.length; i++) {
+            if(cookieArr[i][0] === " ") {
+                cookieArr[i] = cookieArr[i].substring(1);
+            }
+
+            if(cookieArr[i].indexOf(cookieKey) === 0) {
+                result = cookieArr[i].slice(cookieKey.length, cookieArr[i].length);
+                return result;
+            }
+        }
+        return result;
+    }
+
+    let comment = document.querySelector("#prev-comment-content").textContent=getCookieValue([[${prev}]]);
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
