--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -60,7 +60,7 @@
     let limit = 3;
     let isEnd = false;
     let URL =
-        "http://localhost:8080/post/feed/" + offset + "/" + limit;
+        "http://localhost:8080/post/search/member/" + [[${member.memberId}]] + "/" + offset + "/" + limit;
     document.addEventListener("DOMContentLoaded", () => {
         //set up the IntersectionObserver to load more images if the footer is visible.
         //URL - https://gist.githubusercontent.com/prof3ssorSt3v3/1944e7ba7ffb62fe771c51764f7977a4/raw/c58a342ab149fbbb9bb19c94e278d64702833270/infinite.json
@@ -72,12 +72,12 @@
         const observer = new IntersectionObserver(handleIntersect, options);
         observer.observe(document.querySelector("footer"));
         //an initial load of some data
-        //getData();
+        // getData();
     });
     function handleIntersect(entries) {
         if (entries[0].isIntersecting) {
             console.warn("something is intersecting with the viewport");
-            URL = "http://localhost:8080/post/feed/" + offset + "/" + limit;
+            URL = "http://localhost:8080/post/search/member/" + [[${member.memberId}]] + "/" + offset + "/" + limit;
             getData();
         }
     }
@@ -88,6 +88,7 @@
             fetch(URL)
                 .then(response => response.json())
                 .then(data => {
+                    console.log(data);
                     data.forEach(item => {
                         let fig = document.createElement("figure");
                         let fc = document.createElement("figcaption");
