#36 프론트에서 follow 버튼 작업중

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -41,26 +41,11 @@
           </li>
           <div class="col">
             <form th:action="@{/member/logout}" method="post">
-              <button class="w-100 btn btn-lg"
-                      onclick="location.href='items.html'" type="submit">
+              <button class="w-100 btn btn-lg" type="submit">
                 로그아웃
               </button>
             </form>
           </div>
-          <!--                    <li class="nav-item dropdown">-->
-          <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-          <!--                            Dropdown-->
-          <!--                        </a>-->
-          <!--                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-          <!--                            <li><a class="dropdown-item" href="#">Action</a></li>-->
-          <!--                            <li><a class="dropdown-item" href="#">Another action</a></li>-->
-          <!--                            <li><hr class="dropdown-divider"></li>-->
-          <!--                            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-          <!--                        </ul>-->
-          <!--                    </li>-->
-          <!--                    <li class="nav-item">-->
-          <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-          <!--                    </li>-->
         </ul>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" th:unless="${loginMember != null}">
           <div class="col">
@@ -69,9 +54,9 @@
               </button>
           </div>
         </ul>
-        <form class="d-flex" th:action="@{/search}">
-          <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <input class="btn btn-outline-success" type="submit"th:value="Search"/>
+        <form class="d-flex" th:action="@{/post/search}">
+          <input name="searchWord" class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+          <button class="btn btn-outline-success" type="submit" th:value="Search"/>
         </form>
       </div>
     </div>
