--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -45,6 +45,9 @@
 <div class="profile container">
     <img class="rounded card-img-top" id="profileImg" th:src="|/post/images/${member.profileImage}|"/>
     <p th:text="${member.nickName}"></p>
+    <div  th:unless="${loginMember.memberId == member.memberId}">
+            <button id="follow-id" th:onclick="follow([[${member.memberId}]])" th:value="follow"></button>
+    </div>
     <main>
         <!-- images will be loaded here with figure and figcaption -->
     </main>
@@ -72,8 +75,8 @@
         const observer = new IntersectionObserver(handleIntersect, options);
         observer.observe(document.querySelector("footer"));
         //an initial load of some data
-        // getData();
     });
+
     function handleIntersect(entries) {
         if (entries[0].isIntersecting) {
             console.warn("something is intersecting with the viewport");
@@ -81,6 +84,7 @@
             getData();
         }
     }
+
     function getData() {
         let main = document.querySelector("main");
         console.log("fetch some JSON data");
@@ -93,7 +97,7 @@
                         let fig = document.createElement("figure");
                         let fc = document.createElement("figcaption");
                         let img = document.createElement("img");
-                        let link=document.createElement("a");
+                        let link = document.createElement("a");
                         link.href = "http://localhost:8080/post/" + item.postId;
                         img.src = "http://localhost:8080/post/images/" + item.thumbnailFileName;
                         img.alt = item.postId;
@@ -108,6 +112,28 @@
                     }
                     offset += data.length;
                 });
+        }
+
+        function follow() {
+            console.log("호출");
+            let params = {
+                "param1": "value1",
+                "param2": "value2"
+            };
+
+            let query = Object.keys(params)
+                .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
+                .join('&');
+
+            let url = 'http://localhost:8080/member/follow?' + query;
+
+            fetch(url)
+                .then(data => data.text())
+                .then((text) => {
+                    console.log('request succeeded with JSON response', text)
+                }).catch(function (error) {
+                console.log('request failed', error)
+            });
         }
     }
 </script>
