--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -54,9 +54,9 @@
               </button>
           </div>
         </ul>
-        <form class="d-flex" th:action="@{/post/search}">
+        <form class="d-flex" th:action="@{/search}">
           <input name="searchWord" class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-          <button class="btn btn-outline-success" type="submit" th:value="Search"/>
+          <button class="btn btn-outline-success" type="submit" th:value="Search">Search</button>
         </form>
       </div>
     </div>
