--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -43,6 +43,9 @@
             max-width: 100%;
         }
 
+
+
+
     </style>
 </head>
 <body>
@@ -50,15 +53,10 @@
 <div class="profile container">
     <img class="rounded card-img-top" id="profileImg" th:src="|/post/images/${member.profileImage}|"/>
     <p th:text="${member.nickName}"></p>
-        [[${loginMember.followingStatus}]]
+
     <div th:if="${#strings.equals(loginMember.followingStatus, 'NONE')} == false">
         <button id="follow-btn"
-                th:if="${#strings.equals(loginMember.followingStatus, 'UNFOLLOW')}"
-                th:onclick="'follow();'" th:value="follow">follow
-        </button>
-        <button id="unfollow-btn"
-                th:if="${#strings.equals(loginMember.followingStatus, 'FOLLOW')}"
-                th:onclick="'unfollow()'" th:value="follow">unfollow
+                th:onclick="'follow()'">[[${loginMember.followingStatus}]]
         </button>
     </div>
 
@@ -127,52 +125,30 @@
                     offset += data.length;
                 });
         }
-
-        document.getElementById('follow-btn').addEventListener('click', follow);
-        document.getElementById('unfollow-btn').addEventListener('click', unfollow);
-
-        function follow() {
-            let params = {
-                "followee": [[${member.memberId}]]
-            };
-
-            let query = Object.keys(params)
-                .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
-                .join('&');
-
-            let url = 'http://localhost:8080/member/follow?' + query;
-
-            fetch(url)
-                .then(response => response.json())
-                .then((data) => {
-                    let e = document.getElementById('follow-btn')
-                    e.disabled = true
-                    e.innerHTML = "<div>following</div>"
-                }).catch(function (error) {
-                console.log('request failed', error)
-            });
-        }
-
-        function unfollow() {
-            let params = {
-                "followee": [[${member.memberId}]]
-            };
-
-            let query = Object.keys(params)
-                .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
-                .join('&');
-
-            let url = 'http://localhost:8080/member/unfollow?' + query;
-
-            fetch(url)
-                .then(data => data.text())
-                .then((text) => {
-                    console.log('request succeeded with JSON response', text)
-                }).catch(function (error) {
-                console.log('request failed', error)
-            });
-        }
     }
+
+    function follow() {
+        let status = document.getElementById('follow-btn').innerText.toLowerCase();
+        let params = {
+            "followee": [[${member.memberId}]]
+        };
+
+        let query = Object.keys(params)
+            .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
+            .join('&');
+
+        let url = 'http://localhost:8080/member/' + status + '?' + query;
+        fetch(url)
+            .then(response => response.json())
+            .then((data) => {
+
+            }).catch(function (error) {
+            console.log('request failed', error)
+        });
+        document.getElementById('follow-btn').innerText = (status === 'follow') ? 'UNFOLLOW' : 'FOLLOW';
+    }
+
+
 </script>
 </body>
 </html>
