--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -50,15 +50,11 @@
 <div class="profile container">
     <img class="rounded card-img-top" id="profileImg" th:src="|/post/images/${member.profileImage}|"/>
     <p th:text="${member.nickName}"></p>
-        [[${loginMember.followingStatus}]]
+    [[${loginMember.followingStatus}]]
     <div th:if="${#strings.equals(loginMember.followingStatus, 'NONE')} == false">
-        <button id="follow-btn"
+        <button th:id="follow-btn"
                 th:if="${#strings.equals(loginMember.followingStatus, 'UNFOLLOW')}"
-                th:onclick="'follow();'" th:value="follow">follow
-        </button>
-        <button id="unfollow-btn"
-                th:if="${#strings.equals(loginMember.followingStatus, 'FOLLOW')}"
-                th:onclick="'unfollow()'" th:value="follow">unfollow
+                th:value="follow">
         </button>
     </div>
 
@@ -73,6 +69,8 @@
         crossorigin="anonymous"></script>
 
 <script th:inline="javascript">
+
+
     let offset = 0;
     let limit = 3;
     let isEnd = false;
@@ -127,51 +125,36 @@
                     offset += data.length;
                 });
         }
+    }
 
-        document.getElementById('follow-btn').addEventListener('click', follow);
-        document.getElementById('unfollow-btn').addEventListener('click', unfollow);
+    document.getElementById('follow-btn').addEventListener('click', follow);
+    let follow_btn = document.getElementById('follow-btn');
+    let params = {
+        "followee": [[${member.memberId}]]
+    };
+    let query = Object.keys(params)
+        .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
+        .join('&');
+    let follow_url = "";
+    if ("${#strings.equals(loginMember.followingStatus, 'UNFOLLOW')}") {
+        follow_btn.value = "follow";
+        follow_url = 'http://localhost:8080/member/follow?' + query;
+        follow_btn.innerHTML = "follow";
+    } else if ("${#strings.equals(loginMember.followingStatus, 'FOLLOW')}") {
+        follow_btn.value = "unfollow";
+        follow_url = 'http://localhost:8080/member/unfollow?' + query;
+        follow_btn.innerHTML = "unfollow";
+    }
 
-        function follow() {
-            let params = {
-                "followee": [[${member.memberId}]]
-            };
-
-            let query = Object.keys(params)
-                .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
-                .join('&');
-
-            let url = 'http://localhost:8080/member/follow?' + query;
-
-            fetch(url)
-                .then(response => response.json())
-                .then((data) => {
-                    let e = document.getElementById('follow-btn')
-                    e.disabled = true
-                    e.innerHTML = "<div>following</div>"
-                }).catch(function (error) {
-                console.log('request failed', error)
-            });
-        }
-
-        function unfollow() {
-            let params = {
-                "followee": [[${member.memberId}]]
-            };
-
-            let query = Object.keys(params)
-                .map(k => encodeURIComponent(k) + '=' + encodeURIComponent(params[k]))
-                .join('&');
-
-            let url = 'http://localhost:8080/member/unfollow?' + query;
-
-            fetch(url)
-                .then(data => data.text())
-                .then((text) => {
-                    console.log('request succeeded with JSON response', text)
-                }).catch(function (error) {
-                console.log('request failed', error)
-            });
-        }
+    function follow() {
+        fetch(follow_url)
+            .then(response => response.json())
+            .then((data) => {
+                console.log('hello');
+                location.reload();
+            }).catch(function (error) {
+            console.log('request failed', error)
+        });
     }
 </script>
 </body>
