--- a/src/main/resources/templates/member_update_form.html
+++ b/src/main/resources/templates/member_update_form.html
@@ -20,12 +20,12 @@
 <div class="container">
 
     <div class="py-5 text-center">
-        <h2>회원 가입</h2>
+        <h2>회원 정보 수정</h2>
     </div>
 
     <h4 class="mb-3">회원 정보 입력</h4>
 
-    <form th:action="@{/member/update}" th:object="${member}" method="post">
+    <form th:action="@{/member/update}" th:object="${loginMember}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
