--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -29,9 +29,13 @@
 <body>
 <div th:insert="~{/header :: headerFragment (${loginMember})}"></div>
 <div class="container">
-    <img class="rounded card-img-top" th:src="|/post/images/${member.profileImage}|" width="50" height="300"/>
-    <p th:text="${member.nickName}"></p>
-    <button th:onclick=""></button>
+    <img class="rounded card-img-top" th:src="|/post/images/${loginMember.profileImage}|" width="50" height="300"/>
+    <p th:text="${loginMember.email}"></p>
+    <p th:text="${loginMember.nickName}"></p>
+    <p th:text="${loginMember.phoneNumber}"></p>
+
+    <button th:onclick="|location.href='@{/member/verify}'|">내정보수정</button>
+    <button th:onclick="|location.href='@{/member/withdraw}'|">회원탈퇴</button>
     <main>
         <!-- images will be loaded here with figure and figcaption -->
     </main>
@@ -43,59 +47,7 @@
         crossorigin="anonymous"></script>
 
 <script th:inline="javascript">
-    let offset = 0;
-    let limit = 3;
-    let isEnd = false;
-    let URL =
-        "http://localhost:8080/post/feed/" + offset + "/" + limit;
-    document.addEventListener("DOMContentLoaded", () => {
-        //set up the IntersectionObserver to load more images if the footer is visible.
-        //URL - https://gist.githubusercontent.com/prof3ssorSt3v3/1944e7ba7ffb62fe771c51764f7977a4/raw/c58a342ab149fbbb9bb19c94e278d64702833270/infinite.json
-        let options = {
-            root: null,
-            rootMargins: "0px",
-            threshold: 0.5
-        };
-        const observer = new IntersectionObserver(handleIntersect, options);
-        observer.observe(document.querySelector("footer"));
-        //an initial load of some data
-        //getData();
-    });
-    function handleIntersect(entries) {
-        if (entries[0].isIntersecting) {
-            console.warn("something is intersecting with the viewport");
-            URL = "http://localhost:8080/post/feed/" + offset + "/" + limit;
-            getData();
-        }
-    }
-    function getData() {
-        let main = document.querySelector("main");
-        console.log("fetch some JSON data");
-        if (isEnd === false) {
-            fetch(URL)
-                .then(response => response.json())
-                .then(data => {
-                    data.forEach(item => {
-                        let fig = document.createElement("figure");
-                        let fc = document.createElement("figcaption");
-                        let img = document.createElement("img");
-                        let link=document.createElement("a");
-                        link.href = "http://localhost:8080/post/" + item.postId;
-                        img.src = "http://localhost:8080/post/images/" + item.thumbnailFileName;
-                        img.alt = item.postId;
-                        fc.textContent = item.content;
-                        link.appendChild(img);
-                        fig.appendChild(link);
-                        fig.appendChild(fc);
-                        main.appendChild(fig);
-                    });
-                    if (data.length === 0) {
-                        isEnd = true;
-                    }
-                    offset += data.length;
-                });
-        }
-    }
+
 </script>
 </body>
 </html>
