--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,6 +9,7 @@
         .container {
             max-width: 560px;
         }
+
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
@@ -37,9 +38,10 @@
             <div class="input-group">
                 <input type="text" id="loginId" th:field="*{nickName}" class="form-control"
                        th:errorclass="field-error">
-                <div class="field-error" th:errors="*{nickName}" />
+                <div class="field-error" th:errors="*{nickName}"/>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary btn-lg" id="nbutton" type="button" onclick="check('NickName', 'loginId', 'nbutton')">중복검사</button>
+                    <button class="btn btn-primary btn-lg" id="nbutton" type="button"
+                            onclick="check('NickName', 'loginId', 'nbutton')">중복검사</button>
                 </span>
             </div>
 
@@ -48,9 +50,10 @@
             <label for="name">이메일</label>
             <div class="input-group">
                 <input type="text" id="name" th:field="*{email}" class="form-control" th:errorclass="field-error">
-                <div class="field-error" th:errors="*{email}" />
+                <div class="field-error" th:errors="*{email}"/>
                 <span class="input-group-btn">
-                    <button class="btn btn-primary btn-lg" id="ebutton" type="button" onclick="check('Email', 'name', 'ebutton')">중복검사</button>
+                    <button class="btn btn-primary btn-lg" id="ebutton" type="button"
+                            onclick="check('Email', 'name', 'ebutton')">중복검사</button>
                 </span>
             </div>
         </div>
@@ -58,17 +61,15 @@
             <label for="phoneNumber">phone number</label>
             <input type="text" id="phoneNumber" th:field="*{phoneNumber}" class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{phoneNumber}" />
+            <div class="field-error" th:errors="*{phoneNumber}"/>
         </div>
         <div>
             <label for="password">비밀번호</label>
             <input type="password" id="password" th:field="*{pw}"
                    class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{pw}" />
+            <div class="field-error" th:errors="*{pw}"/>
         </div>
-
-        <hr class="my-4">
 
         <div class="row">
             <div class="col">
@@ -89,13 +90,13 @@
         fetch(url)
             .then(response => response.json())
             .then(data => {
-               if (data.flag === 'invalid') {
+                if (data.flag === 'invalid') {
                     document.getElementById(buttonId).style.backgroundColor = 'red';
                     document.getElementById(buttonId).innerText = '사용불가';
-               } else {
+                } else {
                     document.getElementById(buttonId).style.backgroundColor = 'green';
                     document.getElementById(buttonId).innerText = '사용가능';
-               }
+                }
             });
     }
 </script>
