post 수정 내용 미리 입력되게 변경 회원가입시  정보 일부만 입력하고 회원가입 누르면 로그인 페이지로 리다이랙션되는 이슈 수정 완료

--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -20,7 +20,7 @@
         <input type="text" name="postId" th:value="${post.postId} " th:hidden="true">
         <br/>
 
-        <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
+        <input type="text" class="form-control" id="content" name="postContent" th:value="${post.content}">
         <div class="col-12">
             <a href="/" role="button" class="btn btn-secondary">수정 취소</a>
             <button type="submit"  class="btn btn-primary">수정 완료</button>
