--- a/src/main/resources/templates/post_feed_form.html
+++ b/src/main/resources/templates/post_feed_form.html
@@ -103,7 +103,8 @@
                     data.forEach(item => {
                         let fig = document.createElement("figure");
                         let fc = document.createElement("figcaption");
-                        let img = document.createElement("img");
+                        let img = document.createEle
+                        ment("img");
                         let link=document.createElement("a");
                         link.href = "http://localhost:8080/post/" + item.postId;
                         img.src = "http://localhost:8080/post/images/" + item.thumbnailFileName;
